# trabalho-2-taleshrocha

./: CMakeLists.txt  README.org
data/: cre-log-dis-ser-des.txt  cre-log-dis-ser-qu.txt  cre-log-dis.txt  create-channel.txt  disc.txt  entrevista.txt  leave-server.txt  leave.txt  list-channels.txt  list-messages.txt  list-partic.txt  list.txt  logi.txt  quotes.txt  rem-ser.txt  script_comandos.txt  send-message.txt  test.txt
data/CP1/: A1.2-create-user.txt  A1.3-login.txt  A2.1-disconnect.txt  A2.2-create-server.txt  A2.3-set-server-desc.txt  A2.4-set-server-invite-code.txt  A2.5-list-servers.txt  A2.6-remove-server.txt
data/CP2/: A2.7-enter-server.txt  A2.8-leave-server.txt  A2.9-list-participants.txt  B1.1-list-channels.txt  B1.2-create-channel.txt  B1.3-enter-channel.txt  B1.4-leave-channel.txt  B2.1-send-message.txt  B2.2-list-messages.txt
data/EXTRA/: files.txt
include/: CanalTexto.h  Executor.h  Mensagem.h  Servidor.h  Sistema.h  Usuario.h
src/: CanalTexto.cpp  Executor.cpp  Mensagem.cpp  Servidor.cpp  Sistema.cpp  Usuario.cpp  concordo.cpp  executor.cpp
